--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "illuminate/container": "^7||^8||^9",
     "illuminate/database": "^7||^8||^9",
     "illuminate/pagination": "^7||^8||^9",
-    "symfony/console": "^5",
+    "symfony/console": "^5|^6",
     "jgrossi/corcel": "^4.0||^5.0||^6.0"
   },
   "extra": {
