--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
     }
   },
   "require": {
-    "php": ">=7.3",
-    "fakerphp/faker": "^1",
+    "php": ">7.4 | ^8-0",
+    "fakerphp/faker": "^1.21",
     "illuminate/container": "^7||^8||^9",
     "illuminate/database": "^7||^8||^9",
     "illuminate/pagination": "^7||^8||^9",
