--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,13 @@
     }
   },
   "require": {
-    "php": ">7.4 | ^8-0",
+    "php": "^7.4 || ^8.0",
     "fakerphp/faker": "^1.21",
-    "illuminate/container": "^7||^8||^9",
-    "illuminate/database": "^7||^8||^9",
-    "illuminate/pagination": "^7||^8||^9",
-    "symfony/console": "^5|^6",
-    "jgrossi/corcel": "^4.0||^5.0||^6.0"
+    "illuminate/container": "^7 || ^8 || ^9",
+    "illuminate/database": "^7 || ^8 || ^9",
+    "illuminate/pagination": "^7 || ^8 || ^9",
+    "symfony/console": "^5 || ^6",
+    "jgrossi/corcel": "^4.0 || ^5.0 || ^6.0"
   },
   "extra": {
     "acorn": {
@@ -40,8 +40,8 @@
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.4.2",
     "roots/support": "dev-master",
-    "illuminate/console": "^7.25||^8.0||^9.0",
-    "roots/acorn": "^1.0.9||^2.0||^3.0"
+    "illuminate/console": "^7.25 || ^8.0 || ^9.0",
+    "roots/acorn": "^1.0.9 || ^2.0 || ^3.0"
   },
   "scripts": {
     "lint": [
