--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,13 @@
   },
   "require": {
     "php": "^7.4 || ^8.0",
-    "fakerphp/faker": "^1.21",
+    "fakerphp/faker": "^1.9",
     "illuminate/container": "^7 || ^8 || ^9",
     "illuminate/database": "^7 || ^8 || ^9",
     "illuminate/pagination": "^7 || ^8 || ^9",
     "symfony/console": "^5 || ^6",
-    "jgrossi/corcel": "^4.0 || ^5.0 || ^6.0"
+    "jgrossi/corcel": "^4.0 || ^5.0 || ^6.0",
+    "bordoni/phpass": "^0.3.6"
   },
   "extra": {
     "acorn": {
