--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
   "name": "tiny-pixel/acorn-db",
-  "type": "package",
-  "license": "MIT",
   "description": "Eloquent database support for Acorn projects",
+  "license": "MIT",
+  "type": "package",
   "authors": [
     {
       "name": "Kelly Mears",
@@ -12,21 +12,27 @@
   "support": {
     "issues": "https://github.com/pixelcollective/acorn-db/issues"
   },
+  "require": {
+    "php": "^7.4 || ^8.0",
+    "bordoni/phpass": "^0.3.6",
+    "fakerphp/faker": "^1.9",
+    "illuminate/container": "^7 || ^8 || ^9",
+    "illuminate/database": "^7 || ^8 || ^9",
+    "illuminate/pagination": "^7 || ^8 || ^9",
+    "jgrossi/corcel": "^4.0 || ^5.0 || ^6.0",
+    "symfony/console": "^5 || ^6"
+  },
+  "require-dev": {
+    "illuminate/console": "^7.25 || ^8.0 || ^9.0",
+    "roots/acorn": "^1.0.9 || ^2.0 || ^3.0",
+    "roots/support": "dev-master",
+    "squizlabs/php_codesniffer": "^3.4.2"
+  },
   "autoload": {
     "psr-4": {
       "AcornDB\\": "src/",
       "Corcel\\": "src/"
     }
-  },
-  "require": {
-    "php": "^7.4 || ^8.0",
-    "fakerphp/faker": "^1.9",
-    "illuminate/container": "^7 || ^8 || ^9",
-    "illuminate/database": "^7 || ^8 || ^9",
-    "illuminate/pagination": "^7 || ^8 || ^9",
-    "symfony/console": "^5 || ^6",
-    "jgrossi/corcel": "^4.0 || ^5.0 || ^6.0",
-    "bordoni/phpass": "^0.3.6"
   },
   "extra": {
     "acorn": {
@@ -37,12 +43,6 @@
         "AcornDB\\Providers\\PackageServiceProvider"
       ]
     }
-  },
-  "require-dev": {
-    "squizlabs/php_codesniffer": "^3.4.2",
-    "roots/support": "dev-master",
-    "illuminate/console": "^7.25 || ^8.0 || ^9.0",
-    "roots/acorn": "^1.0.9 || ^2.0 || ^3.0"
   },
   "scripts": {
     "lint": [
