--- a/composer.json
+++ b/composer.json
@@ -13,19 +13,18 @@
     "issues": "https://github.com/pixelcollective/acorn-db/issues"
   },
   "require": {
-    "php": "^7.4 || ^8.0",
+    "php": "^8.1 || ^8.2",
     "bordoni/phpass": "^0.3.6",
     "fakerphp/faker": "^1.9",
-    "illuminate/container": "^7 || ^8 || ^9",
-    "illuminate/database": "^7 || ^8 || ^9",
-    "illuminate/pagination": "^7 || ^8 || ^9",
+    "illuminate/container": "^9 || ^10",
+    "illuminate/database": "^9 || ^10",
+    "illuminate/pagination": "^9 || ^10",
     "jgrossi/corcel": "^4.0 || ^5.0 || ^6.0",
     "symfony/console": "^5 || ^6"
   },
   "require-dev": {
-    "illuminate/console": "^7.25 || ^8.0 || ^9.0",
-    "roots/acorn": "^1.0.9 || ^2.0 || ^3.0",
-    "roots/support": "dev-master",
+    "illuminate/console": "^9.0 || ^10.0",
+    "roots/acorn": "^3.0 || ^4.0",
     "squizlabs/php_codesniffer": "^3.4.2"
   },
   "autoload": {
