--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "illuminate/container": "^9 || ^10",
     "illuminate/database": "^9 || ^10",
     "illuminate/pagination": "^9 || ^10",
-    "jgrossi/corcel": "^4.0 || ^5.0 || ^6.0",
+    "jgrossi/corcel": "^7.0",
     "symfony/console": "^5 || ^6"
   },
   "require-dev": {
