--- a/composer.json
+++ b/composer.json
@@ -16,15 +16,15 @@
     "php": "^8.1 || ^8.2",
     "bordoni/phpass": "^0.3.6",
     "fakerphp/faker": "^1.9",
-    "illuminate/container": "^9 || ^10",
-    "illuminate/database": "^9 || ^10",
-    "illuminate/pagination": "^9 || ^10",
+    "illuminate/container": "^10",
+    "illuminate/database": "^10",
+    "illuminate/pagination": "^10",
     "jgrossi/corcel": "^7.0",
     "symfony/console": "^5 || ^6"
   },
   "require-dev": {
-    "illuminate/console": "^9.0 || ^10.0",
-    "roots/acorn": "^3.0 || ^4.0",
+    "illuminate/console": "^10.0",
+    "roots/acorn": "^4.0",
     "squizlabs/php_codesniffer": "^3.4.2"
   },
   "autoload": {
